Style update to correct display issue
When using just two buttons in a row, versus three, buttons were out of alignment (not centered properly) on larger desktop displays greater than 1000px in width. Realized I needed to limit 6% left/right margin added to 2nd and 5th child elements to a narrower desktop display media query (for display screen wider than 870px). This corrected alignment issues, while still maintaining separation of elements at the 870px -990px display width (which is the purpose of the 6% left/right margin on the 2nd and 5th child elements for this screen width).

--- a/assets/sass/local-group.scss
+++ b/assets/sass/local-group.scss
@@ -1837,6 +1837,9 @@ Share Icons
        .Module__listItem {
             margin: 0 auto;
         }
+        .Module__listItem:nth-child(2), .Module__listItem:nth-child(5) {
+           margin: 0 auto;
+        }
         .Module__title {
 			margin-top: 5em;
         }
